# RecipeBox-1

./: pyproject.toml
project/: settings.py  urls.py
recipe/: admin.py  forms.py  models.py  urls.py  views.py
recipe/migrations/: 0001_initial.py  0002_author_favorites.py
recipe/templates/: author.html  author_add.html  index.html  recipe_details.html  recipe_edit.html
